--- a/index.html
+++ b/index.html
@@ -11,6 +11,61 @@
 	<link href="css/fontface.css" rel="stylesheet" type="text/css">
 	<link href="css/font-awesome.min.css" rel="stylesheet">
 	<link href="css/foundation.css" rel="stylesheet">
+	<style>
+	.dcc-preloader {
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			background-color: #dcdddf;
+			z-index: 99;
+			height: 100%;
+		}
+		.progress-bar {
+			position: absolute;
+			left: 50%;
+			top: 48.5%;
+			margin: 0;
+			margin-right: -50%;
+			transform: translate(-50%, -50%);
+			width: 54px;
+			height: 64px;
+			background: #b4b4b4;
+			z-index: 2;
+		}
+		.progress {
+			width: 54px;
+			height: 0%;
+			background: #6bbcff;
+		}
+		.progress-val {
+			color: #6bbcff;
+			font-size: 16px;
+			font-weight: bold;
+		}
+		.logo-preload {
+			position: absolute;
+			left: 50%;
+			top: 48.5%;
+			margin: 0;
+			margin-right: -50%;
+			transform: translate(-50%, -50%);
+			width: 54px;
+			height: 65px;
+			z-index: 3;
+		}
+		.main-preload {
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			margin: 0;
+			margin-right: -50%;
+			transform: translate(-50%, -50%);
+			width: 250px;
+			z-index: 1;
+		}
+	</style>
 	<link href="css/app2.css" rel="stylesheet">
 </head>
 <body class="home" data-state="0">
@@ -1134,6 +1189,12 @@
 		<div class="nav up"><a href="#next"><span class="fa fa-chevron-up"></span></a></div>
 		<div class="nav down"><a href="#prev"><span class="fa fa-chevron-down"></span></a></div>
 	</footer>
+
+	<div class="dcc-preloader">
+		<div class="progress-bar"><div class="progress"></div><div class="progress-val text-center"></div></div>
+		<div class="main-preload"><img src="img/preload.gif"></div>
+		<div class="logo-preload"><img src="img/logo-preload.png"></div>
+	</div>
 
 	<script src="js/jquery.js" type="text/javascript"></script>
 
