--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			z-index: 99;
 			height: 100%;
 		}
+		.dcc-preloader > div { transition:all ease .5s; transform-origin:50% 50%;}
 		.progress-bar {
 			position: absolute;
 			left: 50%;
