--- a/index.html
+++ b/index.html
@@ -115,7 +115,13 @@
 			<div id="dcc-home">
 				<div class="dcc-building">
 					<div class="dragon-building"><img src="img/dcc-building.jpg" data-hq="dcc-building-hq.jpg" alt="Dragon Building" class="bg-lq"></div>
-					<div class="dcc-plank"><a href="#start" class="start-now"><span class="on"></span><span class="on2x"></span></a></div>
+					<div class="dcc-plank">
+						<a href="#start" class="start-now">
+							<span class="off"><img src="img/start-a.jpg" alt="Click To Play"></span>
+							<span class="on"><img src="img/start-b.jpg" alt="Click To Play"></span>
+							<span class="on2x"><img src="img/start-c.jpg" alt="Click To Play"></span>
+						</a>
+					</div>
 				</div>
 				<div class="dcc-zeppelin">
 					<div class="front-zeppelin">
@@ -491,6 +497,20 @@
 								</div>
 								<div class="team-content">
 
+									<div class="dragon dragon-bebek">
+										<a href="#dragon-bebek" class="dragon-btn">+</a>
+										<div class="popup-content open-top-left">
+											<img src="img/dragoners/van.png" alt="">
+											<div class="details">
+												<h4>Mascot</h4>
+												<h5>Mascot</h5>
+												<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ab dolor veritatis odio unde, accusantium repellat. Natus, illo illum, laudantium, dicta deleniti quisquam dolorem tempore officiis optio architecto, blanditiis ipsum!</p>
+												<h6>Skills &amp; Special Attribute</h6>
+												<p>Lorem ipsum dolor sit amet.</p>
+											</div>
+										</div>
+									</div>
+
 									<div class="dragon dragon-aji">
 										<a href="#dragon-aji" class="dragon-btn">+</a>
 										<div class="popup-content open-top-right">
@@ -693,6 +713,20 @@
 									<div class="mascot"></div>
 								</div>
 								<div class="team-content">
+
+									<div class="dragon dragon-bear">
+										<a href="#dragon-bear" class="dragon-btn">+</a>
+										<div class="popup-content open-top-left">
+											<img src="img/dragoners/van.png" alt="">
+											<div class="details">
+												<h4>Mascot</h4>
+												<h5>Mascot</h5>
+												<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ab dolor veritatis odio unde, accusantium repellat. Natus, illo illum, laudantium, dicta deleniti quisquam dolorem tempore officiis optio architecto, blanditiis ipsum!</p>
+												<h6>Skills &amp; Special Attribute</h6>
+												<p>Lorem ipsum dolor sit amet.</p>
+											</div>
+										</div>
+									</div>
 
 									<div class="dragon dragon-rajiv">
 										<a href="#dragon-rajiv" class="dragon-btn">+</a>
@@ -963,6 +997,20 @@
 												<p>He loves both art and social interaction. His mission is to integrate them and bring the best out into this world. Known for his humble-natured ambience who always try to create a mutual working environment. He is not easy to befriend with, but you will love him if you already get to know him.</p>
 												<h6>Skills &amp; Special Attribute</h6>
 												<p>UI &amp; UX Designer, Interaction Engineer, Responsive Web Designer, Korean Addicts</p>
+											</div>
+										</div>
+									</div>
+
+									<div class="dragon dragon-cat">
+										<a href="#dragon-cat" class="dragon-btn">+</a>
+										<div class="popup-content open-top-right">
+											<img src="img/dragoners/van.png" alt="">
+											<div class="details">
+												<h4>Mascot</h4>
+												<h5>Mascot</h5>
+												<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ab dolor veritatis odio unde, accusantium repellat. Natus, illo illum, laudantium, dicta deleniti quisquam dolorem tempore officiis optio architecto, blanditiis ipsum!</p>
+												<h6>Skills &amp; Special Attribute</h6>
+												<p>Lorem ipsum dolor sit amet.</p>
 											</div>
 										</div>
 									</div>
