--- a/index.html
+++ b/index.html
@@ -11,65 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/fontface.css">
 	<link rel="stylesheet" type="text/css" href="css/cframe.min.css">
-	<style>
-		.dcc-preloader {
-			position: absolute;
-			top: 0;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			background-color: #dcdddf;
-			z-index: 99;
-			height: 100%;
-		}
-		.dcc-preloader > div {
-			transition: all ease .5s;
-			transform-origin: 50% 50%;
-		}
-		.progress-bar {
-			position: absolute;
-			left: 50%;
-			top: 48.5%;
-			margin: 0;
-			margin-right: -50%;
-			transform: translate(-50%, -50%);
-			width: 54px;
-			height: 64px;
-			background: #b4b4b4;
-			z-index: 2;
-		}
-		.progress {
-			width: 54px;
-			height: 0%;
-			background: #6bbcff;
-		}
-		.progress-val {
-			color: #6bbcff;
-			font-size: 16px;
-			font-weight: bold;
-		}
-		.logo-preload {
-			position: absolute;
-			left: 50%;
-			top: 48.5%;
-			margin: 0;
-			margin-right: -50%;
-			transform: translate(-50%, -50%);
-			width: 54px;
-			height: 65px;
-			z-index: 3;
-		}
-		.main-preload {
-			position: absolute;
-			left: 50%;
-			top: 50%;
-			margin: 0;
-			margin-right: -50%;
-			transform: translate(-50%, -50%);
-			width: 250px;
-			z-index: 1;
-		}
-	</style>
+	<style>.dcc-preloader {position: absolute;top: 0;left: 0;right: 0;bottom: 0;background-color: #dcdddf;z-index: 99;height: 100%;}.dcc-preloader > div {transition: all ease .5s;transform-origin: 50% 50%;}.progress-bar {position: absolute;left: 50%;top: 48.5%;margin: 0;margin-right: -50%;transform: translate(-50%, -50%);width: 54px;height: 64px;background: #b4b4b4;z-index: 2;}.progress {width: 54px;height: 0%;background: #6bbcff;}.progress-val {color: #6bbcff;font-size: 16px;font-weight: bold;}.logo-preload {position: absolute;left: 50%;top: 48.5%;margin: 0;margin-right: -50%;transform: translate(-50%, -50%);width: 54px;height: 65px;z-index: 3;}.main-preload {position: absolute;left: 50%;top: 50%;margin: 0;margin-right: -50%;transform: translate(-50%, -50%);width: 250px;z-index: 1;}</style>
 	<link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
 <body class="home" data-state="0">
@@ -79,7 +21,7 @@
 		<div class="main-preload"><img src="img/preload.gif"></div>
 		<div class="logo-preload"><img src="img/logo-preload.png"></div>
 	</div>
-
+	
 	<header id="header">		
 		<div class="logo"><a href="http://www.dragoncapital.center/" title="Dragon Capital Center"><img src="img/logo.png" alt="Dragon Capital Center"></a></div>
 		<div class="mainmenu">
@@ -477,7 +419,7 @@
 									<div class="rocket">
 										<div class="rocket-body"><img src="img/rocket.png"></div>
 										<div class="rocket-smoke"></div>
-										<a href="#dcc-outspace" class="btn-launch rippling"><span>Launch</span></a>
+										<a href="#dcc-outspace" class="btn-launch rippling"><span><img src="img/launch-button.png" alt="Launch Now"></span></a>
 									</div>
 								</div>
 							</div>
@@ -1206,7 +1148,7 @@
 											<div class="whiteboard">
 												<h2>Start the future now!</h2>
 												<p>Hi, FYI we just came back to mother earth to spread the news about what we have seen back in the future. So most probably what we are doing might not be something you have seen before. We know what you have thought. No, not that one, and not that one either. Curious?</p>
-												<a class="btn-begin rippling"><span>Meet Us</span></a>
+												<a class="btn-begin rippling"><span><img src="img/lobby-button.png" alt=""></span></a>
 											</div>
 										</div>
 									</div>
