--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				</div>
 				<div class="dcc-zeppelin">
 					<div class="front-zeppelin">
-						<img src="img/zeppelin.png" alt="Zeppelin">
+						<div class="zep-img"><img src="img/zeppelin.png" alt="Zeppelin"></div>
 						<div class="zep-led"><a href="#"><img src="img/zep-led.jpg" alt="LED"></a></div>
 					</div>
 					<div class="back-zeppelin">
