--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 						<li><a href="https://plus.google.com/u/0/117935779617495492644/about" target="_blank" title="Follow us on Google+"><span class="fa fa-google-plus"></span></a></li>
 						<li><a href="https://www.linkedin.com/in/dragoncapital" target="_blank" title="Follow us on Linked In"><span class="fa fa-linkedin"></span></a></li>
 					</ul>
+					<div class="copyright">&copy;2015 Dragon Capital Center.<br>All Rights Reserved.</div>
 				</div>
 			</div>
 		</div>
@@ -151,11 +152,11 @@
 														<a href="#dragon-system-admin" data-dragon-id="dragon-system-admin">System Admin</a>
 														<div id="dragon-system-admin" class="reveal">
 															<div class="hiring-content">
-																<h3>System Admin</h3>
-																<p>As the guardian angel, every technical problem to create a reliable operation of computer systems is your playground.</p>
-																<p>You have to ensure that the security, performance, resources, and the computers he/she manages meets the needs of the users.</p>
+																<h3>Developer Operational</h3>
+																<p>As the guardian angel, of every technical problem. Capable of creating a reliable operation of computer systems.</p>
+																<p>You have to ensure the security, performance, resources, and the specification meet the needs of the users.</p>
 																<h6>Requirement</h6>
-																<p>Max 35 years old | Familiar with AWS</p>
+																<p>Max 35 years old | Familiar with Cloud Computing</p>
 															</div>
 															<div class="hiring-footer">
 																<p>Send your CV and resume to: <strong><a href="mailto:join@dragoncapital.center">join@dragoncapital.center</a></strong></p>
@@ -1172,10 +1173,18 @@
 									<div class="centered-content" id="lobby-content">
 										<div class="content">
 											<h2>Start the future now!</h2>
-											<p><span class="paragraph"></span></p>
+											<div class="normal-typed">
+												<p><span class="paragraph"></span></p>
+											</div>
+											<div class="skip-typed">
+												<p>Hi, FYI we just came back to mother earth to spread the news about what we have seen back in the future. So most probably what we are doing might not be something you have seen before.<br/>We know what you have thought.<br/>No, not that one, and not that one either.<br/>Curious?</p>
+											</div>
 											<div class="lobby-button-container">
 												<a class="btn-begin btn-meet-us rippling"><span><img src="img/meet-us-button.png" alt=""></span></a>
 												<a class="btn-begin btn-watch-us rippling"><span><img src="img/watch-us-button.png" alt=""></span></a>
+											</div>
+											<div class="skip-container">
+												<a href="#skip" class="skip-typed-button">Skip This <span class="fa fa-fast-forward"></span></a>
 											</div>
 										</div>
 
