--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/fontface.css">
 	<link rel="stylesheet" type="text/css" href="css/cframe.min.css">
-	<style>.dcc-preloader {position: absolute;top: 0;left: 0;right: 0;bottom: 0;background-color: #dcdddf;z-index: 99;height: 100%;}.dcc-preloader > div {-webkit-transition: all ease .5s;transition: all ease .5s;-webkit-transform-origin: 50% 50%;transform-origin: 50% 50%;}.progress-bar {position: absolute;left: 50%;top: 48.5%;margin: 0;margin-right: -50%;-webkit-transform: translate(-50%, -50%);transform: translate(-50%, -50%);width: 54px;height: 64px;background: #b4b4b4;z-index: 2;}.progress {width: 54px;height: 0%;background: #6bbcff;}.progress-val {color: #6bbcff;font-size: 16px;font-weight: bold;}.logo-preload {position: absolute;left: 50%;top: 48.5%;margin: 0;margin-right: -50%;-webkit-transform: translate(-50%, -50%);transform: translate(-50%, -50%);width: 54px;height: 65px;z-index: 3;}.main-preload {position: absolute;left: 50%;top: 50%;margin: 0;margin-right: -50%;-webkit-transform: translate(-50%, -50%);transform: translate(-50%, -50%);width: 250px;z-index: 1;} .sub-preloader { top:0;right:0;bottom:0;left:0; z-index: 23; background: #ebebeb url(img/sub-preloader.gif) no-repeat center; position: absolute;} .sub-preloader span {	top: 50%;	left: 50%;position: absolute;-webkit-transform: translate(-50%,-50%);	transform: translate(-50%,-50%);color: #6bbcff;}
+	<style>.dcc-preloader{top:0;right:0;bottom:0;left:0;z-index:25;background-color:#ebebeb;position:absolute}.dcc-preloader>div{-webkit-transition:all ease .5s;transition:all ease .5s;-webkit-transform-origin:50% 50%;transform-origin:50% 50%}.dcc-preloader img{top:50%;left:50%;position:absolute;-webkit-transform:translate(-50%,-50%);transform:translate(-50%,-50%);width:250px;z-index:1}.progress-bar{bottom:41.8%;transform:translate(-50%,-50%);width:54px;height:64px;background:#b4b4b4;z-index:2}.progress-bar,.progress-val{left:50%;position:absolute;-webkit-transform:translate(-50%,-50%)}.logo-preload,.progress-val{transform:translate(-50%,-50%);z-index:3}.progress{width:54px;background:#6bbcff;position:absolute}.progress-val{top:55.5%;color:#6bbcff;font-size:16px;font-weight:700}.logo-preload{bottom:41.8%;left:50%;width:54px;height:65px}.logo-preload,.sub-preloader span{position:absolute;-webkit-transform:translate(-50%,-50%)}.sub-preloader{top:0;right:0;bottom:0;left:0;z-index:23;background:url(img/sub-preloader.gif) center no-repeat #ebebeb;position:absolute}.sub-preloader span{top:50%;left:50%;transform:translate(-50%,-50%);color:#6bbcff}
 	</style>
 	<link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
 <body class="home" data-state="0">
 	
 	<div class="dcc-preloader">
-		<div class="progress-bar"><div class="progress"></div><div class="progress-val text-center"></div></div>
-		<div class="main-preload"><img src="img/preload.gif"></div>
+		<img src="img/preload.gif">
+		<div class="progress-bar">
+		    <div class="progress"></div>
+        </div>
+        <div class="progress-val text-center">0%</div>
 		<div class="logo-preload"><img src="img/logo-preload.png"></div>
 	</div>
 	
@@ -67,7 +70,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="dcc-zeppelin">
+				<div class="predcc-zeppelin">
 					<div class="front-zeppelin">
 						<div class="zep-img"><img src="img/zeppelin.png" alt="Zeppelin"></div>
 						<div class="zep-led"><a href="#"><img src="img/zep-led.jpg" alt="LED"></a></div>
